--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -1,17 +1,5 @@
-h1{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    letter-spacing: 3px;
-}
+/* 
 
-h2, a {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-}
-
-h3, h4, .banner-more{
-   color:#aaaaaa;
-}
 
 span{
     color: #0096cc;
@@ -53,4 +41,4 @@ a:hover, .contact-label:hover{
     .contact{
         padding-left: 0;
     }
-}
+}  */
