--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,9 @@
+.navbar-logo{
+  width: 50px;
+  height: 42px;
+  border-radius: 4px;
+}
+
 
 .my-navbar{
     font-family: 'Montserrat';
@@ -35,20 +41,12 @@
 }
 
 @media (max-width: 991x) {
-  .navbar-left {
-    float: left; /* Center Sobit Singh when the screen size is smaller */
-    text-align: center;
-    margin-bottom: 10px; /* Add some spacing below Sobit Singh */
-  }
-
+  
   .navbar-right {
-    float: left; /* Center other links when the screen size is smaller */
-    text-align: center;
-    margin-left: 20px;
+    flex-direction: column;
+    
   }
 
-  .nav-item {
-    display: inline-block;
-    margin-right: 20px; /* Adjust spacing between items for smaller screens */
-  }
+  
 }
+
