--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,105 +1,212 @@
+body{
+  text-align: center;
+}
+
 h1{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    letter-spacing: 3px;
-    font-size: 86px;
-    color: #272829;
-    
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  letter-spacing: 3px;
+  font-size: 86px;
+  color: #272829;
+  text-transform: uppercase;
+  padding: 24px;
+
 }
 
 h2{
-    color: #A8A196;
-    text-shadow: 0px 0px 1px #A8A196;
+  color: #A8A196;
+  text-shadow: 0px 0px 1px #A8A196;
 }
 
 .banner{
-    /* background-image: url("https://images.unsplash.com/photo-1566041510394-cf7c8fe21800?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2187&q=80"); */
-    height: calc(100vh - 70px);
-    width: 100%;
+  height: calc(100vh - 64px);
+  width: 100%;
 }
 
 .contact-list{
-    position: absolute;
-    background: #FFFF;
-    list-style: none;
-    border-radius: 8px;
-    padding: 0;
-    top: 30%;
-    left: 0%;
+  position: absolute;
+  background: #FFFF;
+  list-style: none;
+  border-radius: 8px;
+  padding: 0;
+  top: 30%;
+  left: 0%;
+  margin-bottom: 0;
 }
 
 .contact-list li{
-    padding: 12px;
-    margin: 18px;
-    font-size: 34px;
-    /* background: red; */
+  padding: 12px;
+  margin: 18px;
+  font-size: 34px;
 }
 
 .contact-list a{
-    color: #272829;
+  color: #272829;
 }
 
 .contact-list li:hover ,a:hover{
-    color: #dadd57;
-    /* background: #ecef41; */
-    cursor: pointer;
-    border-radius: 4px;
+  color: #ec241a;
+  transition: all 0.3s ease-in-out;
+  /* border-radius: 4px; */
+}
+
+@media(max-width: 1400px){
+  .contact-list {
+      top: 29%;
+  }
+
+  h1 {
+    font-size: 86px;
+  }
+
+  h2 {
+    font-size: 24px;
+    margin-left: 60px;
+  }
 }
 
 @media(max-width: 1240px){
-    .banner{
-        padding: 64px;
-        margin: 0 auto;
-    }
+   h1{
+    font-size: 60px;
+    padding: 0;
+   }
 
     .contact-list{
-        top: 40%;
+      top: 24%;
+    }
+
+    .contact-list li{
+      font-size: 28px;
     }
 }
+
+@media(max-width: 990px){
+  h1{
+    font-size: 54px;
+    margin-left: 36px;
+    padding: 0;
+  }
+
+  h2{
+    font-size: 20px;
+    margin-left: 70px;
+  }
+  .contact-list{
+    top: 26%;
+  }
+}
+
 @media(max-width: 768px){
-    .banner {
-        padding: 32px; /* Adjust padding for smaller screens */
-    }
+  h1 {
+      font-size: 48px;
+      padding: 0;
+  }
 
-    .contact-list {
-        top: 30%; /* Adjust top positioning for smaller screens */
-    }
+  h2{
+    font-size: 18px;
+  }
 
-    h1 {
-        font-size: 36px; /* Responsive font size */
-        text-align: center;
-        margin-left: 20px;
-        margin-top: -150px;
-        
-    }
+  .contact-list {
+    top: 33%;
+  }
 
-    h2 {
-        font-size: 24px; /* Responsive font size */
-        text-align: center;
-        margin-left: 60px;
-    }
-}
-@media(max-width: 1363px){
-    .banner {
-        padding: 32px; /* Adjust padding for smaller screens */
-    }
+  .contact-list li{
+    font-size: 24px;
+  }
 
-    .contact-list {
-        top: 30%; /* Adjust top positioning for smaller screens */
-    }
 
-    h1 {
-        font-size: 50px; /* Responsive font size */
-        text-align: center;
-        margin-left: 20px;
-        margin-top: -150px;
-        
-    }
-
-    h2 {
-        font-size: 24px; /* Responsive font size */
-        text-align: center;
-        margin-left: 60px;
-    }
 }
 
+@media(max-width: 660px){
+  h1 {
+      font-size: 42px;
+      padding: 0;
+  }
+
+  h2{
+    font-size: 16px;
+  }
+
+  .contact-list {
+    top: 33%;
+  }
+
+  .contact-list li{
+    font-size: 24px;
+  }
+
+  .navbar-right{
+    gap: 0;
+    flex-direction: column;
+    text-align: center;
+    transition: 0.3s;
+    display: none;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    background-color: #FFFEFE;
+  }
+
+  .navbar-right.active{
+    left: 0;
+  }
+
+  .navbar-right-show {
+    display: flex;
+  }
+
+  .navbar-show .navbar-right {
+    display: flex;
+  }
+
+  .navbar-hamburger {
+    font-size: 28px;
+    cursor: pointer;
+  }
+}
+
+@media(max-width: 550px){
+  h1 {
+      font-size: 48px;
+      padding: 0;
+      margin-left: 64px;
+  }
+
+  h2{
+    font-size: 18px;
+    margin-left: 68px;
+  }
+
+
+  .contact-list {
+    top: 33%;
+  }
+
+  .contact-list li{
+    font-size: 24px;
+  }
+
+}
+
+
+@media(max-width: 420px){
+  h1 {
+  font-size: 48px;
+  padding: 0;
+  margin-left: 64px;
+ }
+
+  h2{
+  font-size: 17px;
+  margin-left: 70px;
+  }
+
+  .contact-list{
+    top: 30%;
+  }
+
+  .contact-list li{
+    font-size: 24px;
+  }
+}
