--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,52 +1,40 @@
+.navbar-me{
+  font-family: 'Open Sans', sans-serif;
+  background: #FFFEFE;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  color: rgb(46,46,46);
+  text-transform: uppercase;
+  font-weight: 700;
+  height: 64px;
+}
+
 .navbar-logo{
-  width: 50px;
-  height: 42px;
-  border-radius: 4px;
+  width: 48px;
+  height: 40px;
 }
 
 
-.my-navbar{
-    font-family: 'Montserrat';
-    background-color: rgb(255,255,255) ; 
-    display: flex;
-    justify-content: space-between;
-    font-size: 16px;
-    color: rgb(46,46,46);
-    align-items: center;
-    
-    
+.navbar-hamburger{
+  font-size: 28px;
 }
-/* Change the font size and color of the navbar links */
-  
-/* navbar.css */
-.navbar-left {
-  float: left; /* Align Sobit Singh to the left */
+
+
+.nav-link:hover{
+  color: #ec241a;
+  transition: all 0.3s ease-in-out;
 }
 
 .navbar-right {
-  margin: 0%; /* Align other links to the right */
+  display: none;
 }
 
-.navbar-nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-item {
+.navbar-show .navbar-right {
   display: flex;
-  white-space: nowrap;
-  margin-left: 20px;
-  margin-right: 20px; /* Adjust the gap between items as needed */
 }
 
-@media (max-width: 991x) {
-  
-  .navbar-right {
-    flex-direction: column;
-    
-  }
-
-  
+.navbar-hamburger {
+  font-size: 28px;
+  cursor: pointer;
 }
-
